--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul class="nav">
             
             <li><a href="fact1.html">Fact 1</a></li>
-            <li><a href="fact2.html"></a>Fact 2</li>
-            <li><a href=""></a>Fact 3</li>
+            <li><a href="fact2.html">Fact 2</a></li>
+            <li><a href="fact3.html">Fact 3</a></li>
         </ul>
         
         <h1>
